<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/drawable_gradient_animation_list"
                                             android:id="@+id/loginActivityConstraintLayout"
                                             tools:context=".registerlogin.LoginActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/choosePictureLoginBtn">

        <EditText
                app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegisterPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:id="@+id/emailEditTextLoginPage"
        />

        <EditText
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:id="@+id/passwordEditTextLoginPage"/>

        <Button
                android:id="@+id/loginBtnLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/rounded_button"
                android:text="@string/loginButton"
                android:textColor="@color/colorPrimary"/>

        <TextView
                android:id="@+id/backToRegistrationTextViewLoginPage"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtnLoginPage"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/back_to_registration" android:textAlignment="center"
        />

    </LinearLayout>
    <Button
            android:background="@drawable/circular_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/choosePictureLoginBtn" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:text="@string/select_photo_button"/>
</android.support.constraint.ConstraintLayout>









