<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/drawable_gradient_animation_list"
                                             android:id="@+id/constraintLayout"
                                             tools:context=".registerlogin.RegisterActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/choosePictureRegisterBtn">

        <EditText
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernameEditTextRegisterPage" android:hint="@string/text_hint_name"
        />

        <EditText
                app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegisterPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:id="@+id/emailEditTextRegisterPage"
        />

        <EditText

                app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegisterPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" android:id="@+id/passwordEditTextRegisterPage"/>

        <Button

                android:id="@+id/registerBtnRegisterPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/text_login"
                android:textColor="@color/colorPrimary"/>

        <TextView
                android:id="@+id/alreadyHaveAccountTextViewRegisterPage"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/registerBtnRegisterPage"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/already_have_account" android:textAlignment="center"
        />

    </LinearLayout>

    <Button
            android:background="@drawable/circular_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/choosePictureRegisterBtn" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:text="@string/select_photo_button"/>

    <xyz.schwaab.avvylib.AvatarView android:layout_width="150dp" android:layout_height="150dp"
                                                  app:layout_constraintEnd_toEndOf="@+id/choosePictureRegisterBtn"
                                                  app:layout_constraintStart_toStartOf="@+id/choosePictureRegisterBtn"
                                                  app:layout_constraintBottom_toBottomOf="@+id/choosePictureRegisterBtn"
                                                  app:layout_constraintTop_toTopOf="@+id/choosePictureRegisterBtn"

                                                app:avvy_border_color="@color/colorAccent"
                                                app:avvy_border_highlight_color="#ff5900"
                                                app:avvy_border_highlight_color_end="#bf15bc"
                                                app:avvy_border_thickness="2dp"
                                                app:avvy_border_thickness_highlight="3dp"
                                                app:avvy_distance_to_border="5dp"
                                                app:avvy_highlighted="true"
                                                app:avvy_loading_arches="5"
                                                app:avvy_loading_arches_degree_area="90"

                                                  android:id="@+id/choosePhotoImageViewRegisterActivity"/>
</android.support.constraint.ConstraintLayout>